<?xml version="1.0"?>
<package>
    <!-- Package Information -->
    <name>lips_simulator</name>
    <version>0.0.0</version>
    <description>
        Reads a given set of matlab simulation files, and publishes the data to ROS.
    </description>

    <!-- Code Authors -->
    <author email="pgeneva@udel.edu">Patrick Geneva</author>
    <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>

    <!-- Licensing -->
    <license>MIT</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>lips_comm</build_depend>
    <build_depend>Eigen3</build_depend>
    <build_depend>PCL</build_depend>
    <build_depend>Boost</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>lips_comm</run_depend>
    <run_depend>Eigen3</run_depend>
    <run_depend>PCL</run_depend>
    <run_depend>Boost</run_depend>

</package>
